deployment.yml
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  labels:
    app: nginx
  namespace: svetoslavpetrov
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      #nodePort: 31500
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-sod
  labels:
    app: nginx
  namespace: svetoslavpetrov
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
        ports:
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 2
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 4
          periodSeconds: 3
          failureThreshold: 1
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
