ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: nginx-sod
  namespace: svetoslavpetrov
spec:
  tls:
  - hosts:
      - nginx.unixbashscript.duckdns.org
    secretName: nginx-sod-tls
  rules:
  - host: nginx.unixbashscript.duckdns.org
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 80
        path: /
        pathType: Prefix
